--- a/src/app/app-bar/app-bar.component.html
+++ b/src/app/app-bar/app-bar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="navbar">
-  <span><a [routerLink]="['/app/dashboard']"><img class="logo" src="./assets/logo.svg" /></a></span>
+  <span><a [routerLink]="['/app/dashboard']"><img class="logo" src="./assets/logo.svg" /> </a></span>
   <span class="example-spacer"></span>
   <div class="tool-bar-item cart">
     <a mat-icon-button  [routerLink]="['/app/checkout']">
@@ -21,7 +21,7 @@
     </a>
     <mat-menu #menu="matMenu">
       <button mat-menu-item>Profile</button>
-      <button mat-menu-item>My Account</button>
+      <button mat-menu-item>My Request</button>
     </mat-menu>
   </div>
 </mat-toolbar>
